
2023-05-26  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: added COB_SCREEN_RIGHTLINE, GC extension matching LEFTLINE
	* screenio.c (cob_screen_attr): place curses extensions within #ifdef

2023-05-25  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_sys_set_scr_size), common.h, system.def: added as
	  system library call CBL_GC_SET_SCR_SIZE
	* screenio.c (cob_sys_get_scr_size): create exception and return -1
	  if not supported
	* screenio.c (control_attrs): handle RIGHTLINE (GC extension to CONTROL)
	* screenio.c (cob_screen_attr): set attributes for OVERLINE, LEFTLINE,
	  RIGHTLINE

2023-05-23  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: added COB_SCREEN_GRAPHICS attribute
	* screenio.c (control_attrs): added currently not active attributes
	  CONVERT and GRAPHICS

2023-05-15  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: integrated changes of Chuck Haatveet for CONTROL handling
	  with adjusted tokenization and comparison, limiting struct parse_control
	  to absolute necessary: name + attribute
	* screenio.c (handle_control_field_color, get_cob_color_from_color_value):
	  passing length parameter

2023-05-14  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (adjust_attr_from_control_field, control_attrs):
	  replaced proof-of-concept by actual parsing function using new
	  struct parse_control

2023-05-12  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_attr): always parse COBOL and curses color value
	* screenio.c (cob_to_curses_color): signature changed - operate on integer
	  to be reusable for CONTROL handling,
	  separate return value instead of setting the default color
	* screenio.c (adjust_attr_from_extended_color): new function directly
	  handling the attribute adjustment, replaced (has_extended_color)
	* screenio.c (handle_control_field_color, get_cob_color_from_color_value):
	  new functions to get COBOL color number from text and handling it